fix(css_formatter): insert a whitespace after first selector in complex selector combinations (#5014)

--- a/crates/biome_css_formatter/tests/specs/css/selectors/complex_selector.css
+++ b/crates/biome_css_formatter/tests/specs/css/selectors/complex_selector.css
@@ -9,3 +9,6 @@
 .parent~.child {}
 .parent ~ .child {}
 .parent  ~  .child {}
+
+/* a comment */
+.parent>.child>.child2{}
